--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetLatestNews.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetLatestNews.cshtml
@@ -3,6 +3,7 @@
 @using Orchard.ContentManagement;
 @using Orchard.Utility.Extensions;
 @using LccNetwork.Bootstrap.Extensions;
+@using Orchard.MediaLibrary.Models;
 
 @{
     var items = (Model.ContentItems as IEnumerable<ContentItem>);
@@ -14,16 +15,16 @@
                 var itemDisplayUrl = Url.ItemDisplayUrl(item);
                 // get the mainPart, so we can access the item's fields
                 dynamic mainPart = MyFunctions.GetMainPartFromContentItem(item);
+                
                 var mediaPart = MyFunctions.GetMediaPartFromMediaLibraryPickerField(mainPart.Image, 0);
+                ViewBag.ResizedThumbnailWidth = 200;
+
                 var shortTitle = mainPart.ShortTitle.Value;
                 var summary = mainPart.Summary.Value;
-                var imgSrc = mediaPart != null ? mediaPart.MediaUrl : string.Empty;
-                var imgAlt = mediaPart != null ? mediaPart.AlternateText : string.Empty;
 
                 // keep in mind that our theme has a grid with 36 columns
                 <div class="col-md-6">
-                    <img src="@Display.ResizeMediaUrl(Width: 116, Height: 65, Mode: "max", Alignment: "middlecenter", Path: imgSrc)">
-
+                    @Display(BuildDisplay(mediaPart, "ResizedThumbnail"))
                     <h6>@shortTitle</h6>
                     <p>@summary</p>
                     <a href="@itemDisplayUrl">View</a>
