--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -1,6 +1,6 @@
 ﻿//
 // IMPORTANT
-// Theme.less uses a 36 column grid not the default bootstrap 12 column grid, 
+// Theme.less uses a 36 column grid not the default bootstrap 12 column grid,
 // because the LccNetwork layout requires smaller column increments.
 // So, if you want a column to span have the grid with, use col-md-18.
 // --------------------------------------------------
@@ -23,6 +23,7 @@
 
 @import "Theme/Less/_mixins.less";
 @import "Theme/Less/_workitem-carousel.less";
+@import "Theme/Less/_council-meeting.less";
 
 body {
     background: url('@{img-directory}banner_graphic.jpg') no-repeat;
@@ -121,7 +122,6 @@ div#layout-navigation.group {
         }
 
         .widget-social-networking {
-
             .make-md-column(12);
 
             p {
@@ -158,7 +158,7 @@ div#layout-navigation.group {
         }
 
         .widget-search-form {
-            .make-md-column(12); // this is 1/3 of the grid width          
+            .make-md-column(12); // this is 1/3 of the grid width
         }
 
         .widget-carousel {
