Add the Lcc Map.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -25,6 +25,12 @@
 @import "Theme/Less/_workitem-carousel.less";
 @import "Theme/Less/_council-meeting.less";
 
+// misc
+img
+{
+    max-width:100%;
+}
+
 body {
     background: url('@{img-directory}banner_graphic.jpg') no-repeat;
     background-position: 50% 0;
