--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageNewsItems.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageNewsItems.cshtml
@@ -1,36 +1,11 @@
-﻿@using System.Dynamic;
-@using System.Linq;
-@using Orchard.ContentManagement;
-@using Orchard.Utility.Extensions;
+﻿@using Orchard.ContentManagement;
 @using LccNetwork.Bootstrap.Extensions;
 
 @{
-    var contentItems = (Model.ContentItems as IEnumerable<ContentItem>).ToList();
-    var cssClass = contentItems.First().TypeDefinition.Name.HtmlClassify();
+    dynamic shapes = Model.BuildShapes;
+}
 
-    <ul class="list-unstyled @cssClass">
-        @foreach (dynamic item in contentItems)
-        {
-            var itemDisplayUrl = Url.ItemDisplayUrl((IContent)item);
-            // get the mainPart, so we can access the item's fields
-            var mainPart = MyFunctions.GetMainPartFromContentItem(item);
-            // get the fields
-            var date = mainPart.Date.DateTime.ToString("MMMM d, yyyy");
-            var learnMoreUrl = mainPart.LearnMoreField.Value;
-            
-            var mediaPart = MyFunctions.GetMediaPartFromMediaLibraryPickerField(mainPart.Image);
-            ViewBag.ResizedThumbnailWidth = 200;
-            
-            var title = item.TitlePart.Title;
-            var body = item.BodyPart.Text;
-
-            <li class="clearfix">
-                <h3>@title</h3>
-                <h4>@date</h4>
-                @Display(BuildDisplay(mediaPart, "ResizedThumbnail"))
-                @Html.Raw(body)
-                <a class="pull-left" href="@learnMoreUrl">Learn more</a>
-            </li>
-        }
-    </ul>
+@foreach (dynamic shape in shapes())
+{
+    @Display(shape)
 }
