--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetUpcomingEvents.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetUpcomingEvents.cshtml
@@ -1,36 +1,11 @@
-﻿@{
-    var contentItems = Model.ContentItems;
-    var cssClass = ".upcoming-events-projection";
-    List<dynamic> eventItems = new List<dynamic>();
+﻿@using Orchard.ContentManagement;
+@using LccNetwork.Bootstrap.Extensions;
 
-    foreach (dynamic contentItem in contentItems)
-    {
-        // get the part that is synonomous with the type,
-        // so we can access fields.
-        dynamic itemPart = contentItem.Event;
-
-        // create a convenient 'view model'
-        dynamic eventItem = new System.Dynamic.ExpandoObject();
-        eventItem.Title = contentItem.TitlePart.Title;
-        eventItem.StartDate = itemPart.StartDate.DateTime.ToString(@"MM\/dd");
-        eventItem.EndDate = itemPart.EndDate.DateTime.ToString(@"MM\/dd\/yyyy"); ;
-        eventItem.InternalLink = Url.ItemDisplayUrl((Orchard.ContentManagement.IContent)contentItem);
-
-        // add it to the collection of 'view models'
-        eventItems.Add(eventItem);
-    }
+@{
+    dynamic shapes = Model.BuildShapes;
 }
 
-<div class="@cssClass">
-
-    <ul class="list-unstyled">
-        @foreach (var item in eventItems)
-        {
-            <li>
-                <h6><a href="@item.InternalLink">@item.Title</a></h6>
-                <span>@Html.Raw(@item.StartDate)</span><span> - </span><span>@item.EndDate</span>
-            </li>
-        }
-    </ul>
-
-</div>
+@foreach (dynamic shape in shapes())
+{
+    @Display(shape)
+}
