--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -6,457 +6,41 @@
 // --------------------------------------------------
 
 // bootstrap
-@import 'Bootstrap/less/variables.less';
+@import 'Bootstrap/less/variables.less'; 
 @import 'Bootstrap/less/mixins.less';
-@import 'Bootstrap/less/utilities.less';
+@import 'Bootstrap/less/utilities.less';  
+@import 'Bootstrap/less/scaffolding.less';
 @import 'Bootstrap/less/buttons.less';
-@import 'Bootstrap/less/grid.less';
+@import 'Bootstrap/less/grid.less';            
+@import 'Bootstrap/less/type.less';
+@import 'Bootstrap/less/forms.less';  
+@import 'Bootstrap/less/navs.less';  
+@import 'Bootstrap/less/navbar.less';  
 
-// theme
-@green: #a9d157;
-@orange: #DA8639;
-@brown: #685046;
-@white: white;
-@gray: #D2DABC;
-@blue: #48AFD2;
-@img-directory: 'Theme/Imgs/';
+@layout-main-first-row-height: 240px;               
+@layout-main-second-row-height: 393px;
+@layout-main-widget-spacing: 15px;     
+@layout-main-zone-spacing: 40px;   
+@layout-wrapper-max-width: 960px;
+@logo-width: 390px;
+
+// use a root-relative url,
+// because less files in child directories mess up file-relative paths.
+@img-directory: '/Themes/LccNetwork.Bootstrap/Styles/Theme/Imgs/';
 
 @import "Theme/Less/_mixins.less";
+@import "Theme/Less/_layout.less";
 @import "Theme/Less/_workitem-carousel.less";
-@import "Theme/Less/_council-meeting.less";
-
-// misc
-img
-{
-    max-width:100%;
-}
-
-body {
-    background: url('@{img-directory}banner_graphic.jpg') no-repeat;
-    background-position: 50% 0;
-    padding-top: 65px;
-    margin: auto;
-}
-
-div#layout-wrapper {
-    max-width: 1104px; // this isn't important... it supports the original look and feel
-}
-
-div#layout-navigation.group {
-
-    > div.zone.zone-navigation {
-        padding: 0;
-
-        > article.widget-navigation.widget-menu-widget.widget {
-            margin-bottom: 0;
-            background-color: transparent;
-            border: none;
-
-            div.container-fluid {
-                position: relative;
-
-                div.navbar-header {
-                    margin-left: -15px;
-
-                    a.navbar-brand {
-                        background-image: url('@{img-directory}lcc-logo.png');
-                        background-repeat: no-repeat;
-                        width: 400px;
-                        height: 120px;
-                        background-color: @white;
-                        display: block;
-                        color: white;
-                        text-decoration: none;
-                        padding: 0;
-                        margin: 0;
-                        float: left;
-                        max-width: 100%;
-                    }
-                }
-
-                nav.navbar-collapse {
-                    float: left;
-                    padding: 0;
-
-                    ul {
-                        background-color: #BFBFBF;
-                        position: absolute;
-                        bottom: 0;
-                    }
-                }
-            }
-        }
-    }
-}
-
-#layout-featured {
-    background: @brown;
-
-    .zone-featured {
-
-        .widget-compelling-link {
-            .make-md-column(12);
-
-            p {
-                margin: 0;
-                padding: 0;
-            }
-
-            p.text-field-lead {
-                color: @orange;
-                font-size: @font-size-large;
-            }
-
-            p.text-field-message {
-                color: @white;
-                font-size: @font-size-base;
-            }
-
-            p.link-field-action {
-                position: absolute;
-                top: 20px;
-                left: 150px;
-
-                a {
-                    .btn;
-                    .btn-warning;
-                    background-color: @orange;
-                    font-weight: bolder;
-                    text-transform: uppercase;
-                }
-            }
-        }
-
-        .widget-social-networking {
-            .make-md-column(12);
-
-            p {
-                float: left;
-            }
-
-            p.link-field > span > a {
-                background-repeat: no-repeat;
-                background-size: contain;
-                overflow: hidden;
-                display: block;
-                width: 28px;
-                height: 28px;
-                color: transparent;
-                margin: 0;
-                padding: 0;
-            }
-
-            p.link-field-flickr a {
-                background-image: url('@{img-directory}icon_flickr.png');
-            }
-
-            p.link-field-facebook a {
-                background-image: url('@{img-directory}icon_fb.png');
-            }
-
-            p.link-field-twitter a {
-                background-image: url('@{img-directory}icon_twitter.png');
-            }
-
-            p.link-field-r-s-s a {
-                background-image: url('@{img-directory}icon_rss.png');
-            }
-        }
-
-        .widget-search-form {
-            .make-md-column(12); // this is 1/3 of the grid width
-        }
-
-        .widget-carousel {
-            .make-md-column(36);
-        }
-
-        .widget {
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-    }
-}
-
-#layout-before-main {
-    background: @orange;
-
-    .zone-before-main {
-
-        .widget {
-
-            &, a {
-                color: @white;
-                text-transform: uppercase;
-            }
-
-            a {
-                text-decoration: underline;
-            }
-
-            position: relative;
-            padding: 20px;
-            padding-right: 200px;
-
-            h2 {
-                margin: 15px;
-                font-size: 16px;
-                font-weight: bolder;
-            }
-
-            img {
-                padding: 10px;
-                position: absolute;
-                top: 0;
-                right: 0;
-            }
-        }
-    }
-}
-
-#layout-main-container {
-    padding: 0; // exception to the [id^="layout-"] rule
-    .widget-before-content,
-    .widget-content {
-        padding: 25px 0; // horizontal padding will sometime be overrided by make-column
-        > header {
-            border-top: thin solid @brown;
-            border-bottom: thin solid @brown;
-            margin: 0 5px 10px 5px;
-
-            h1, h1 > small {
-                // reset
-                margin: 0;
-                padding: 0;
-                color: @brown;
-                font-weight: bolder;
-                text-transform: uppercase;
-
-                small {
-                    font-weight: bold;
-                    font-size: @font-size-base;
-                    line-height: 26px;
-                }
-            }
-        }
-
-        [class$="-projection"] {
-            margin: 0 5px 0 5px;
-
-            h6 {
-                color: @orange;
-                font-weight: bolder;
-                text-transform: uppercase;
-                margin: 4px 0;
-            }
-        }
-    }
-
-    #layout-main.group { // is a row from base theme
-        background: @gray;
-
-        > #layout-content.group { // is a col from base theme
-            padding-top: 40px;
-
-            .zone {
-                padding-bottom: 40px;
-            }
-
-            > #before-content {
-                > .zone-before-content {
-                    .make-row();
-
-                    .widget {
-                        height: 325px;
-                        overflow: hidden;
-                        //
-                        // green about
-                        //
-                        &:nth-child(1) {
-                            .make-md-column-offset(1);
-                            .make-md-column(9);
-                            background: @green;
-                            color: @white;
-                            font-size: @font-size-h1;
-
-                            a:last-child {
-                                font-size: @font-size-base;
-                                font-weight: @headings-font-weight;
-                                color: @brown;
-                                .link-arrow-right(@brown);
-                            }
-                        }
-                        //
-                        // lastest news
-                        //
-                        &:nth-child(2) {
-                            .make-md-column-offset(1);
-                            .make-md-column(24);
-                            background-color: @white;
-
-                            .latest-news-projection {
-
-                                p, a {
-                                    margin: @padding-small-vertical 0;
-                                    color: @blue;
-                                    font-size: @font-size-small;
-                                }
-
-                                a {
-                                    .link-double-arrow-right;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-
-            > #content {
-                > .zone-content {
-                    .make-row();
-
-                    .widget {
-                        height: 500px;
-                        //
-                        // lcc in the spotlight
-                        //
-                        &:nth-child(2) {
-                            .make-md-column-offset(1);
-                            .make-md-column(8);
-                            background: @white;
-
-                            > header > h1 > small {
-                                display: block;
-                            }
-
-                            .spotlight-projection {
-                                img {
-                                    display: block;
-                                }
-
-                                p, a {
-                                    display: inline;
-                                    font-size: @font-size-small;
-                                }
-
-                                p > a {
-                                    .link-double-arrow-right;
-                                }
-                            }
-                        }
-                        //
-                        // upcoming events
-                        //
-                        &:nth-child(3) {
-                            .make-md-column-offset(1);
-                            .make-md-column(15);
-                            background: @white;
-
-                            > header > h1 > small {
-                                display: block;
-                            }
-
-                            .upcoming-events-projection {
-                                h2 {
-                                    color: @blue;
-                                    text-transform: none;
-                                }
-
-                                ul.list-unstyled {
-                                    margin-bottom: 0;
-                                }
-                            }
-                        }
-                        //
-                        // super links
-                        //
-                        &:nth-child(4),
-                        &:nth-child(5),
-                        &:nth-child(6) {
-                            .make-md-column-offset(1);
-                            .make-md-column(9);
-                            height: auto;
-                            margin-bottom: @padding-large-vertical;
-
-                            p {
-                                margin: @padding-large-vertical;
-                                font-size: @font-size-large;
-                                line-height: @line-height-large;
-                                font-weight: bolder;
-                                color: @white;
-                                .link-arrow-right(@white);
-
-                                strong {
-                                    margin-left: -1px;
-                                    font-size: @font-size-h1;
-                                    text-transform: uppercase;
-                                }
-                            }
-                        }
-
-                        &:nth-child(4) {
-                            background: @orange;
-                        }
-
-                        &:nth-child(5) {
-                            background: @blue;
-                        }
-
-                        &:nth-child(6) {
-                            background: @white;
-
-                            p {
-                                color: @brown;
-                                .link-arrow-right(@brown);
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-#layout-footer {
-    background-color: @orange;
-
-    #footer {
-
-        #footer-quad {
-        }
-
-        #footer-sig {
-
-            .zone-footer {
-                text-align: right;
-
-                article.widget-footer.widget-footer-menu {
-
-                    div {
-                        .make-row();
-                        text-align: left;
-
-                        ul {
-                            .make-md-column-offset(1);
-                            .make-md-column(6);
-                            padding: @padding-base-vertical;
-                            font-size: @font-size-small;
-
-                            > li {
-                                > h6 {
-                                    color: @brown;
-                                    font-weight: bolder;
-                                }
-
-                                > a {
-                                    color: @white;
-                                    text-decoration: none;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+@import "Theme/Less/_council-meeting.less"; 
+@import "Theme/Less/_upcoming-events.less";
+@import "Theme/Less/_latest-news.less";
+@import "Theme/Less/_green-about.less";
+@import "Theme/Less/_lcc-spotlight.less";
+@import "Theme/Less/_compelling-link.less";     
+@import "Theme/Less/_social-networking.less";  
+@import "Theme/Less/_orange-feature.less"; 
+@import "Theme/Less/_super-links.less";     
+@import "Theme/Less/_widget-footer-menu.less";      
+@import "Theme/Less/_datetime.less";      
+                           
+                                                                                                  
