--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_workitem-carousel.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_workitem-carousel.less
@@ -29,7 +29,7 @@
 
             > .carousel-caption {
                 background-color: rgba(0,0,0,0.5);
-                font-size: @font-size-small;
+                font-size: @font-size-base;
                 left: auto;
                 padding: 0;
                 right: 0;
@@ -37,8 +37,7 @@
                 top: 0;
 
                 > h3 {
-                    color: @green;
-                    font-size: @font-size-small;
+                    color: @green;                    
                     font-weight: bolder;
                     line-height: 1em;
                     margin: 0;
