Do a bunch more pro bono css.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_datetime.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_datetime.less
@@ -2,8 +2,8 @@
 .date-time-field-end-date {
     display: inline;
 
-    &.date-time-field-start-date {
-        &:after {
+    &.date-time-field-end-date {
+        .date:before {
             content: ' to ';
             display: inline;
         }
