--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_layout.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_layout.less
@@ -55,8 +55,7 @@ div#layout-navigation.group {
             .navbar;
             .navbar-default;
             margin-bottom: 0;
-            border-top: none;
-            border-bottom: none;
+            border:none;
 
             div.container-fluid {
                 padding: 0;
@@ -96,7 +95,7 @@ div#layout-navigation.group {
                             font-weight: bolder;
                             text-align: center;
                             text-transform: uppercase;
-                            width: (@layout-wrapper-max-width - @logo-width - 2) / 6;
+                            width: (@layout-wrapper-max-width - @logo-width) / 6;
                         }
                     }
                 }
